[package]
name = "p2p_chat_on_router"
version = "0.1.0"
edition = "2018"
authors = ["ferivonus"]


[dependencies]
libp2p = { version = "0.53.2", features = ["full"] }
tokio = { version = "1.38.1", features = ["full"] }
async-trait = "0.1.81"
futures = { version = "0.3.30" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
